Initialized all object

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset = "UTF-8">
-        <title>Four in a Row with Treehouse</title>
+        <title>Four in a Row with Laura-Louise</title>
         <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
         <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
     </head>
